--- a/Deep_Dive_1_Section_6_First_class_Functions.ipynb
+++ b/Deep_Dive_1_Section_6_First_class_Functions.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Deep_Dive_1_Section_6_First_class_Functions.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNEiT7v1P5JDzEQYlvfGTpA",
+      "authorship_tag": "ABX9TyOWdnaCaSarxl3ndwQHm7fI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -798,16 +797,16 @@
       "metadata": {
         "id": "5VGtbL-1zugp",
         "colab_type": "code",
+        "outputId": "eb8a678e-89f5-40f0-81eb-fc9752101662",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "eb8a678e-89f5-40f0-81eb-fc9752101662"
+        }
       },
       "source": [
         "help(my_func)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,16 +825,16 @@
       "metadata": {
         "id": "slEIPtvhzy99",
         "colab_type": "code",
+        "outputId": "7b1696aa-82f9-4a56-f15c-7e6522cf240a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "7b1696aa-82f9-4a56-f15c-7e6522cf240a"
+        }
       },
       "source": [
         "my_func.__annotations__"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,16 +861,16 @@
       "metadata": {
         "id": "rKalyEnkz2dw",
         "colab_type": "code",
+        "outputId": "bfcc01eb-b7e2-42a6-fb77-b473828947d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bfcc01eb-b7e2-42a6-fb77-b473828947d6"
+        }
       },
       "source": [
         "my_func(1, 2, 3, 4, 55, k1=10, k3=300, k4=600, kakoTo=20202)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,9 +942,588 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JMZN3Ua9G3e4",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding time"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QeAJ2Pnr0BjV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4c82ebc2-ac74-4d29-b8ae-696323bfca3b"
+      },
+      "source": [
+        "lambda x: x**2"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function __main__.<lambda>>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l90nfO2zHfnt",
+        "colab_type": "text"
+      },
+      "source": [
+        "As you can see, the above expression just created a function."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0tb8U1_aHlHF",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Assigning to a Variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZoduGQ58HbM8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "func = lambda x: x**2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K2QF8ozIHyXx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "701379a7-1996-41f0-f853-9f4b1ede41c2"
+      },
+      "source": [
+        "type(func)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "function"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YxjTy1BaH0Tn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8ef6e34c-77a5-4fd7-f6b0-c94acafe351b"
+      },
+      "source": [
+        "func(3)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G5G10kCPIDi0",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can specify arguments for lambdas just like we would for any function created using **def**, except for annotations:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IhV0en7DH-bZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "func_1 = lambda x, y=10: (x, y)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DG5-6uuYIJsy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "79866642-038b-48d2-de4a-ca1deaee1d68"
+      },
+      "source": [
+        "func_1(1, 2)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "85eerxQvIL29",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e16207d2-6f8d-433a-af08-5204ae1ee04a"
+      },
+      "source": [
+        "func_1(1)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cfvahN5EIZI0",
+        "colab_type": "text"
+      },
+      "source": [
+        "We can even use \\* and \\*\\*:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HAASADdpIUKC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "func_2 = lambda x, *args, y, **kwargs: (x, *args, y, {**kwargs})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9pVvcVMiIbej",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "efaabe26-6dd0-4d7f-b7b8-542d6adcf73b"
+      },
+      "source": [
+        "func_2(1, 'a', 'b', y=100, a=10, b=20)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 'a', 'b', 100, {'a': 10, 'b': 20})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e9FCDKLdIgWW",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Passing as an Argument"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DTIQ4OIAIjt8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lambdas are functions, and can therefore be passed to any other function as an argument (or returned from another function)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hc_K2fJ1IdRN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def apply_func(x, fn):\n",
+        "    return fn(x)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r2pQ36YSIm1m",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "36518c0e-bab7-4c9b-9352-058711558261"
+      },
+      "source": [
+        "apply_func(3, lambda x: x**2)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XBG3DqOmIpIg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5e2ea1e1-6150-4f87-854c-65c81a650704"
+      },
+      "source": [
+        "apply_func(3, lambda x: x**3)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "27"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UwsLC4wpI4l9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of course we can make this even more generic:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v6Ncbd1BIrA7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e8ed682e-26c4-46d2-e246-3d0333ea9230"
+      },
+      "source": [
+        "def apply_func(fn, *args, **kwargs):\n",
+        "    return fn(*args, **kwargs)\n",
+        "\n",
+        "apply_func(lambda x, y: x+y, 1, 2)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Da__EEhUI8iI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "823ec707-7e6a-45cb-bde8-d19e39ac7b02"
+      },
+      "source": [
+        "apply_func(lambda x, *, y: x+y, 1, y=2)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WknWTVTwI_D6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "faa74b4b-8f68-45c7-aefd-3aa58238cfd2"
+      },
+      "source": [
+        "apply_func(lambda *args: sum(args), 1, 2, 3, 4, 5)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xYcarznDJCxy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of course in the example above, we really did not need to create a lambda!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zc5EHvg3JAw2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "15755765-6082-4fed-e71e-c7c019a78130"
+      },
+      "source": [
+        "apply_func(sum, (1, 2, 3, 4, 5))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Hrd9wfgJGuY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of course, we don't have to use lambdas when calling **apply_func**, we can also pass in a function defined using a **def** statement:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jHYZa8auJE53",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b6842266-b215-4c72-c4fe-709b8acd5ab7"
+      },
+      "source": [
+        "def multiply(x, y):\n",
+        "    return x * y\n",
+        "\n",
+        "apply_func(multiply, 'a', 5)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'aaaaa'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3arbuxddJMAj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "97e95438-7155-4e8f-f6f8-9fc0befa377b"
+      },
+      "source": [
+        "apply_func(lambda x, y: x*y, 'a', 5)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'aaaaa'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gYnn1eeRJORp",
         "colab_type": "code",
         "colab": {}
       },
