--- a/Deep_Dive_1_Section_6_First_class_Functions.ipynb
+++ b/Deep_Dive_1_Section_6_First_class_Functions.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Deep_Dive_1_Section_6_First_class_Functions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdwjq3jCrga2eUFy/5/f9h",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN+rg399Mc0tdMQli35Vs2p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +33,16 @@
       },
       "source": [
         "# 1.Introduction to First Class-Functions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MbjkBtKSDbt-",
+        "colab_type": "text"
+      },
+      "source": [
+        "# New Section"
       ]
     },
     {
@@ -1111,7 +1122,7 @@
       "source": [
         "func_1(1, 2)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,18 +1143,18 @@
       "metadata": {
         "id": "liQLnfygP8fu",
         "colab_type": "code",
+        "outputId": "1b8fd4d3-e889-4385-9392-3fc68223614a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1b8fd4d3-e889-4385-9392-3fc68223614a"
+        }
       },
       "source": [
         "func_11 = lambda x=10, y=11: (x*y)\n",
         "\n",
         "func_11()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1587,17 +1598,17 @@
       "metadata": {
         "id": "gYnn1eeRJORp",
         "colab_type": "code",
+        "outputId": "b725adc9-f86c-4ee4-899c-5e7d7af406c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b725adc9-f86c-4ee4-899c-5e7d7af406c3"
+        }
       },
       "source": [
         "l = ['a', 'B', 'c', 'D']\n",
         "sorted(l)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,17 +1643,17 @@
       "metadata": {
         "id": "o5W5yWHrU8uY",
         "colab_type": "code",
+        "outputId": "dbd84707-965d-4ab7-ea45-fc9e7b04d982",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "dbd84707-965d-4ab7-ea45-fc9e7b04d982"
+        }
       },
       "source": [
         "print(ord('a'))\n",
         "print(ord('B'))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1659,16 +1670,16 @@
       "metadata": {
         "id": "pRKB5uLbTRfJ",
         "colab_type": "code",
+        "outputId": "695571ed-62f0-4950-924f-b2d03fbc1832",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "695571ed-62f0-4950-924f-b2d03fbc1832"
+        }
       },
       "source": [
         "sorted(l, key=str.upper)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1699,16 +1710,16 @@
       "metadata": {
         "id": "bPz6D9AgTYfM",
         "colab_type": "code",
+        "outputId": "0992a295-84e8-4a85-e70b-76e77902c997",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0992a295-84e8-4a85-e70b-76e77902c997"
+        }
       },
       "source": [
         "sorted(l, key = lambda s: s.upper())"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1739,17 +1750,17 @@
       "metadata": {
         "id": "-KsgW4IgTbVC",
         "colab_type": "code",
+        "outputId": "1e4acbe5-8d04-4d09-f825-af98554297e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1e4acbe5-8d04-4d09-f825-af98554297e2"
+        }
       },
       "source": [
         "d = {'def': 300, 'abc': 200, 'ghi': 100}\n",
         "d"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1770,16 +1781,16 @@
       "metadata": {
         "id": "gW5GPILETfe2",
         "colab_type": "code",
+        "outputId": "cd5d0df5-8f7a-4546-c29b-1d9a50b45b70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd5d0df5-8f7a-4546-c29b-1d9a50b45b70"
+        }
       },
       "source": [
         "sorted(d)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1814,16 +1825,16 @@
       "metadata": {
         "id": "QKYHjAoHTq3k",
         "colab_type": "code",
+        "outputId": "bdca5661-6152-4e92-fe21-45808db3952e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bdca5661-6152-4e92-fe21-45808db3952e"
+        }
       },
       "source": [
         "sorted(d, key=lambda k: d[k])"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1854,11 +1865,11 @@
       "metadata": {
         "id": "7ZP9bOf3TkcK",
         "colab_type": "code",
+        "outputId": "1c32d40a-3c83-468f-8570-e4feab481dfa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        },
-        "outputId": "1c32d40a-3c83-468f-8570-e4feab481dfa"
+        }
       },
       "source": [
         "def dist(x):\n",
@@ -1868,7 +1879,7 @@
         "# Trying to sort this list directly won't work since Python does not have an ordering defined for complex numbers:\n",
         "sorted(l)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -1898,16 +1909,16 @@
       "metadata": {
         "id": "tdtXdj0CT43t",
         "colab_type": "code",
+        "outputId": "fc11b347-d882-4494-bbdc-8c633a0c73a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fc11b347-d882-4494-bbdc-8c633a0c73a4"
+        }
       },
       "source": [
         "sorted(l, key=dist)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1938,16 +1949,16 @@
       "metadata": {
         "id": "k1ta1jNLT-3i",
         "colab_type": "code",
+        "outputId": "cba87035-4a1f-48a5-ef05-4bba86c88e94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cba87035-4a1f-48a5-ef05-4bba86c88e94"
+        }
       },
       "source": [
         "sorted(l, key=lambda x: (x.real)**2 + (x.imag)**2)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1978,17 +1989,17 @@
       "metadata": {
         "id": "HEyG0-7wUDVb",
         "colab_type": "code",
+        "outputId": "45aa152e-4534-4281-e581-641bfc679796",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "45aa152e-4534-4281-e581-641bfc679796"
+        }
       },
       "source": [
         "l = ['Cleese', 'Idle', 'Palin', 'Chapman', 'Gilliam', 'Jones']\n",
         "sorted(l)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2009,16 +2020,16 @@
       "metadata": {
         "id": "42-czgMpUGuG",
         "colab_type": "code",
+        "outputId": "94c3846d-2fca-4eb0-c0af-fce8b220fcf0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "94c3846d-2fca-4eb0-c0af-fce8b220fcf0"
+        }
       },
       "source": [
         "sorted(l, key=lambda s: s[-1])"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2122,16 +2133,16 @@
       "metadata": {
         "id": "W69S0inPUImM",
         "colab_type": "code",
+        "outputId": "20d83069-fe16-421a-de91-30af2fc94828",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "20d83069-fe16-421a-de91-30af2fc94828"
+        }
       },
       "source": [
         "(lambda x, y: x + y)(2, 3)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2162,17 +2173,17 @@
       "metadata": {
         "id": "xc9tECYgkJhd",
         "colab_type": "code",
+        "outputId": "9a7c0464-bade-4eb0-fdeb-3022c60f1d48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9a7c0464-bade-4eb0-fdeb-3022c60f1d48"
+        }
       },
       "source": [
         "high_ord_func = lambda x, func: x + func(x)\n",
         "high_ord_func(2, lambda x: x * x)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,16 +2204,16 @@
       "metadata": {
         "id": "-fcL9jJolRR9",
         "colab_type": "code",
+        "outputId": "87eb08a5-4965-4d16-d9de-89872712cd43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "87eb08a5-4965-4d16-d9de-89872712cd43"
+        }
       },
       "source": [
         "high_ord_func(2, lambda x: x + 3)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2233,11 +2244,11 @@
       "metadata": {
         "id": "bM-T_cPllTmn",
         "colab_type": "code",
+        "outputId": "f58fa282-4cc5-4c53-8e7c-8f13b4aacbd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "f58fa282-4cc5-4c53-8e7c-8f13b4aacbd7"
+        }
       },
       "source": [
         "import dis\n",
@@ -2246,7 +2257,7 @@
         "\n",
         "dis.dis(add)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2265,16 +2276,16 @@
       "metadata": {
         "id": "g-UlyZJwmBD6",
         "colab_type": "code",
+        "outputId": "57a65a59-54cf-491a-c5ab-45bd694f15cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "57a65a59-54cf-491a-c5ab-45bd694f15cd"
+        }
       },
       "source": [
         "add"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2295,11 +2306,11 @@
       "metadata": {
         "id": "j5laJUQzmKFY",
         "colab_type": "code",
+        "outputId": "3b30cbfa-692b-4c10-a1f6-4360e2386c56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "3b30cbfa-692b-4c10-a1f6-4360e2386c56"
+        }
       },
       "source": [
         "import dis\n",
@@ -2308,7 +2319,7 @@
         "\n",
         "dis.dis(add)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2327,16 +2338,16 @@
       "metadata": {
         "id": "lwSYWdX6mUkX",
         "colab_type": "code",
+        "outputId": "cc1c50d8-ce2a-479c-ab82-aba54fe503a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cc1c50d8-ce2a-479c-ab82-aba54fe503a3"
+        }
       },
       "source": [
         "add"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2387,17 +2398,17 @@
       "metadata": {
         "id": "YR3ScPaPmVNU",
         "colab_type": "code",
+        "outputId": "a45258ee-5abb-40f2-c3fb-2e59be205c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a45258ee-5abb-40f2-c3fb-2e59be205c59"
+        }
       },
       "source": [
         "(lambda x: \n",
         "    (x % 2 and 'odd' or 'even'))(3)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2438,11 +2449,11 @@
       "metadata": {
         "id": "wx5essN-m12p",
         "colab_type": "code",
+        "outputId": "eb2bb333-b5bd-4b58-8ec3-63323f2d6141",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "eb2bb333-b5bd-4b58-8ec3-63323f2d6141"
+        }
       },
       "source": [
         "# Defining a decorator\n",
@@ -2464,7 +2475,7 @@
         "# Applying decorator to a lambda\n",
         "print((trace(lambda x: x ** 2))(3))"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2482,16 +2493,16 @@
       "metadata": {
         "id": "UQoZSCKroG09",
         "colab_type": "code",
+        "outputId": "6aa000f8-f153-43b5-88e4-3ac20df69eb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "6aa000f8-f153-43b5-88e4-3ac20df69eb8"
+        }
       },
       "source": [
         "list(map(trace(lambda x: x*2), range(3)))"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2546,11 +2557,11 @@
       "metadata": {
         "id": "wxx0jye6pEL5",
         "colab_type": "code",
+        "outputId": "0546dd64-7df6-41f9-b32b-07a3599fe098",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "0546dd64-7df6-41f9-b32b-07a3599fe098"
+        }
       },
       "source": [
         "def outer_func(x):\n",
@@ -2564,7 +2575,7 @@
         "    closure = outer_func(i)\n",
         "    print(f\"closure({i+5}) = {closure(i+5)}\")"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2585,11 +2596,11 @@
       "metadata": {
         "id": "xS7sLKUYpZLH",
         "colab_type": "code",
+        "outputId": "f3a516e7-c812-474f-ef85-a5b965d26193",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "f3a516e7-c812-474f-ef85-a5b965d26193"
+        }
       },
       "source": [
         "def outer_func(x):\n",
@@ -2600,7 +2611,7 @@
         "    closure = outer_func(i)\n",
         "    print(f\"closure({i+5}) = {closure(i+5)}\")"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2640,11 +2651,11 @@
       "metadata": {
         "id": "6m38T6Nyp0Ot",
         "colab_type": "code",
+        "outputId": "e63f6a33-a352-4fca-bbc6-a5f28d3c6bba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
-        },
-        "outputId": "e63f6a33-a352-4fca-bbc6-a5f28d3c6bba"
+        }
       },
       "source": [
         "import unittest\n",
@@ -2665,7 +2676,7 @@
         "if __name__ == '__main__':\n",
         "    unittest.main(verbosity=2)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2750,11 +2761,11 @@
       "metadata": {
         "id": "bhRWVwNWqGfy",
         "colab_type": "code",
+        "outputId": "554402d0-33bb-4863-96b7-fc935a777c5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 765
-        },
-        "outputId": "554402d0-33bb-4863-96b7-fc935a777c5f"
+        }
       },
       "source": [
         "addtwo = lambda x: x + 2\n",
@@ -2771,7 +2782,7 @@
         "    import doctest\n",
         "    doctest.testmod(verbose=True)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2833,6 +2844,116 @@
       },
       "source": [
         "FULL article here: https://realpython.com/python-lambda/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Av_Dwxy9DgJH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 5.Function Introspection - Lecture"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N92kWPlXDt22",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1fGEQnJZ-oFXgjnPTzpaxSFymlILmDmQK)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "677cvEb2DtuQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1jnFHzvsYqm3RnJaLP92UJ9XRlSw9gI5n)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GnlUsi32Dtk0",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1yb5_qXUMQD6MrHCL8pBLcFiRkej5VBJq)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EmUzKuqCDtcB",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1Q48OFMU8we9boDjXfINL7r_EzIixSi0O)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x9ILlFbtDtUJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1xWQmUKeuTyTLpZNMvhIyG8fblM_OF6kG)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ec_usT5NDtLs",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1_7-khgb3ZrdHNG0By48Y8yZWW1gnWAOi)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aCCoCKi2DtCx",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1Fx8kKwmA2I1AO0h7K3hvXPjraJPcjHFC)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iHvjUKRUDs6G",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1pOtW2Uaew_ZYPA4qS0kvYtFGbSo1zRJ7)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hX31u9NCDsw5",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1fkyiNTAc8lA7m8BNFTqDHtvp5qeP3Q8V)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bQrWJUHeDshs",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding time"
       ]
     },
     {
