--- a/Deep_Dive_1_Section_6_First_class_Functions.ipynb
+++ b/Deep_Dive_1_Section_6_First_class_Functions.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep_Dive_1_Section_6_First_class_Functions.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJuAN7raOH86TH3rr13bg1",
+      "authorship_tag": "ABX9TyP9FPzYvbhXjifLpJWXGjAS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3156,6 +3156,139 @@
       },
       "source": [
         "## Coding time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w_gqbxmQcwvS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def my_func(a: \"mandatory positional\",\n",
+        "            b: \"optional positional\" = 1,\n",
+        "            c=2,\n",
+        "            *args: \"add extra positional args here\",\n",
+        "            kw1,\n",
+        "            kw2=100,\n",
+        "            kw3=300,\n",
+        "            **kwargs: \"provide extra kw-only args here\")-> \"does nothing\":\n",
+        "    \"\"\"This function does nothing LOOOOOOOOL.\n",
+        "\n",
+        "    \"\"\"\n",
+        "    i = 10\n",
+        "    j = 20\n",
+        "        "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lmb2wwO0dtou",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a6592aaa-74ea-48d1-f271-650848b3d49e"
+      },
+      "source": [
+        "my_func.__doc__"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'This function does nothing LOOOOOOOOL.\\n\\n    '"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-BBOOQVodzW5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "c43286bb-7824-4739-ebb9-e4bdf4b81089"
+      },
+      "source": [
+        "my_func.__annotations__"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 'mandatory positional',\n",
+              " 'args': 'add extra positional args here',\n",
+              " 'b': 'optional positional',\n",
+              " 'kwargs': 'provide extra kw-only args here',\n",
+              " 'return': 'does nothing'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uC6zremed2Y_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_func.short_description = \"this is a function that does nothing much\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NccY-TURd83f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cf80ca9f-e938-4867-c77f-b55d6c36c0af"
+      },
+      "source": [
+        "my_func.short_description"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'this is a function that does nothing much'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
       ]
     },
     {
