--- a/Deep_Dive_1_Section_6_First_class_Functions.ipynb
+++ b/Deep_Dive_1_Section_6_First_class_Functions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep_Dive_1_Section_6_First_class_Functions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9ZItZ467mrDzDxRkA8m54",
+      "authorship_tag": "ABX9TyNMRGMQC+WnhefABX1uIakC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5173,6 +5173,35 @@
             "\u001b[0;32m<ipython-input-64-57f645413c6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdivmod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: divmod() takes no keyword arguments"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fr0GZOkuPTb5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "0bfe7b6d-dec9-4d4d-e239-4a71164e16db"
+      },
+      "source": [
+        "import inspect\n",
+        "\n",
+        "for param in inspect.signature(divmod).parameters.values():\n",
+        "    print(param.kind)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "POSITIONAL_ONLY\n",
+            "POSITIONAL_ONLY\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
